@@ -1,6 +1,8 @@
 == Firebug Lite 1.2 Change Log ==
+
 2009-03-06 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
   * firebug-lite.js: Changed default for firebug.env.detectFirebug to false
+                     Fixed issue 1555: Ajax calls ... we should not assume that the same domain policy is applied, use try catch instead
     progress.gif:    Corrected mime type
 
 2009-03-03 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
